--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
     </head>
     <body>
         <a href="#storyList" class="skip-link">Skip to content</a>
-
+        <button id="notificationButton" class="btn notification-btn">
+            Subscribe Notifications
+        </button>
         <header class="app-bar">
             <div class="app-bar__brand">
                 <h1>Dicoding Story</h1>
